--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "cross-fetch": "^2.1.1",
     "events": "^2.0.0",
     "express": "^4.16.3",
     "flux": "^3.1.3",
     "mongoose": "^5.0.17",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
